[package]
name = "exqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
base64 = "0.21.2"
chrono = "0.4.26"
hmac = "0.12.1"
jwt = "0.16.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
sha2 = "0.10.7"
thiserror = "1.0.44"
tracing = "0.1.37"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
serde_json = { version = "1.0.104", features = ["preserve_order"] }
